2005-03-27  Andrew Lunn  <andrew.lunn@ascom.ch>

	* cdl/memalloc.cdl: Added reference to documentation
	* doc/memalloc.sgml: Basic user documentation.

2004-10-04  Oyvind Harboe  <oyvind.harboe@zylin.com>

	* src/dlmalloc.cxx (resize_alloc): No longer invoke
	 cyg_memalloc_alloc_fail() on failure to resize. It is not an out
	 of memory condition, it just means the current memory allocation
	 could not be expanded. realloc() will try allocating a completely
	 new block of memory and only if that fails do we have an out of
	 memory condition.

2004-10-01  Oyvind Harboe  <oyvind.harboe@zylin.com>

	* heapgen.tcl: place the CYGBLD_ATTRIB_INIT_PRI such that it
	compiles for gcc 3.4.2 which is more picky about its placement.

2004-06-24  Oyvind Harboe  <oyvind.harboe@zylin.com>

	* Added cyg_memalloc_alloc_fail() fn which is invoked before 
	return NULL from failed allocations. Useful breakpoint site.
	Andrew Lunn wrote some of the code and pointed out various
	wrinkles to be ironed out.

2004-02-15  Jonathan Larmour  <jifl@eCosCentric.com>

	* include/kapi.h: Add throw specifications throughout.
	* src/kapi.cxx: Ditto.

2003-10-06  Andrew Lunn  <andrew.lunn@ascom.ch>

	* src/dlmalloc.cxx (Cyg_Mempool_dlmalloc_Implementation): Fixed
	compiler warning added by previous patch.

2003-09-30  Eric Doenges <Eric.Doengea@DynaPel.com>

	* cdl/memalloc.cdl, src/dlmalloc.cxx: Make the minimum memory
	alignment a configuration option for Doug Lea's memory allocator.

2003-02-05  Jonathan Larmour  <jifl@eCosCentric.com>

	* include/memjoin.inl: Don't use default arg in definition.

2003-02-04  John Dallaway  <jld@ecoscentric.com>

	* src/heapgen.tcl: Accommodate POSIX-style arguments
	under Cygwin.

2003-01-29  John Dallaway  <jld@ecoscentric.com>

	* src/heapgen.tcl: Accommodate latest Cygwin Tcl shell
	(tclsh83.exe)

2002-05-10  Jonathan Larmour  <jlarmour@redhat.com>

	* tests/heaptest.c (test_pat): Make failure messages clearer.
	(cyg_start): Output what failures mean.
